force-app/main/default/objects/FieloEE__PointAudit__c/FieloEE__PointAudit__c.object-meta.xml
<CustomObject>
    <label>Point Audit</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Point Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>