force-app/main/default/objects/FieloEE__PointAudit__c/fields/FieloEE__PointAge__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__PointAge__c</fullName>
    <formula>(FieloEE__RedemptionPoints__r.CreatedDate - FieloEE__TransactionPoints__r.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Point Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>