force-app/main/default/objects/FieloEE__PointAudit__c/fields/FieloEE__Quantity__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>