force-app/main/default/objects/FieloEE__PointAudit__c/fields/FieloEE__RedemptionPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RedemptionPoints__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Redemption Points</label>
    <referenceTo>FieloEE__Point__c</referenceTo>
    <relationshipLabel>Redeemed Points Detail</relationshipLabel>
    <relationshipName>RedemptionPoints</relationshipName>
    <type>Lookup</type>
</CustomField>