force-app/main/default/objects/FieloEE__PointAudit__c/fields/FieloEE__TransactionPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TransactionPoints__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Points</label>
    <referenceTo>FieloEE__Point__c</referenceTo>
    <relationshipLabel>Used Points Detail</relationshipLabel>
    <relationshipName>PointsAudit</relationshipName>
    <type>Lookup</type>
</CustomField>